--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class = "title">
         <h1>Keyboard BeatBox</h1>
-        <h5>Use the keyboard to press the shown keys</h5>    
+        <h5>Use the keyboard or mouse to press the shown keys</h5>    
     </div>
     <div class="container">
         
